--- a/.github/workflows/boost.yml
+++ b/.github/workflows/boost.yml
@@ -31,3 +31,5 @@ jobs:
           BOOST_GIT_PROJECT: ${{fromJSON(github.event.inputs.scan_params).repository}}
           BOOST_GIT_PULL_REQUEST: ${{fromJSON(github.event.inputs.scan_params).pull_request_id}}
           
+          # Combines normal semgrep registry + Gitlab CSharp rules
+          SEMGREP_RULES: auto https://gitlab.com/gitlab-org/security-products/sast-rules/-/raw/main/dist/security_code_scan.yml
